--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,109 +4,64 @@ services:
     environment:
       - PMA_HOST=mariadb
       - PMA_PORT=3306
-      - PMA_USER=bn_opencart     
+      - PMA_USER=bn_opencart
     ports:
       - '${PHPADMIN_PORT:-8888}:80'
     networks:
-      - default
+      - selenoid
 
   mariadb:
     image: docker.io/bitnami/mariadb:11.2
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_USER=bn_opencart      
+      - MARIADB_USER=bn_opencart
       - MARIADB_DATABASE=bitnami_opencart
     ports:
       - '3306:3306'
     networks:
-      - default
+      - selenoid
+    volumes:
+      - mariadb_data:/bitnami/mariadb
 
   opencart:
     image: bitnami/opencart:4.0.2-3-debian-12-r33
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
     ports:
       - '${OPENCART_PORT:-8081}:8080'
       - '8443:8443'
     environment:
-      - OPENCART_HOST=192.168.31.246:${OPENCART_PORT:-8081}
+      - OPENCART_HOST=opencart:8080  
       - OPENCART_DATABASE_HOST=mariadb
       - OPENCART_DATABASE_PORT_NUMBER=3306
       - OPENCART_DATABASE_USER=bn_opencart
-      - OPENCART_DATABASE_NAME=bitnami_opencart     
+      - OPENCART_DATABASE_NAME=bitnami_opencart
       - ALLOW_EMPTY_PASSWORD=yes
     depends_on:
       - mariadb
     networks:
-      - default
-
-  selenoid1:
-    image: aerokube/selenoid:latest-release
-    command: ["-limit", "4", "-container-network", "selenoid"]
-    volumes:
-      - ./configs/browsers.json:/etc/selenoid/browsers.json
-      - /var/run/docker.sock:/var/run/docker.sock
-    expose:
-      - "4444"
-    networks:
-      - default
-
-  selenoid2:
-    image: aerokube/selenoid:latest-release
-    command: ["-limit", "4", "-container-network", "selenoid"]
-    volumes:
-      - ./configs/browsers.json:/etc/selenoid/browsers.json
-      - /var/run/docker.sock:/var/run/docker.sock
-    expose:
-      - "4444"
-    networks:
-      - default
-
-  ggr:
-    image: aerokube/ggr:latest
-    ports:
-      - "4444:4444"
-    volumes:
-      - ./configs:/etc/grid-router:ro
-    depends_on:
-      - selenoid1
-      - selenoid2
-    networks:
-      - default
-
-  ggr-ui:
-    image: aerokube/ggr-ui:latest
-    ports:
-      - "8082:8080"
-    environment:
-      - GGR_HOST=ggr
-    depends_on:
-      - ggr
-    networks:
-      - default
-
-  selenoid-ui:
-    image: aerokube/selenoid-ui:latest-release
-    ports:
-      - "8083:8080"
-    environment:
-      - SELENOID_URI=http://ggr:4444
-    depends_on:
-      - ggr-ui
-    networks:
-      - default
+      - selenoid
 
   tests:
     build:
       context: .
       dockerfile: Dockerfile
     depends_on:
-      - opencart
-      - ggr
-    volumes:
-      - .:/app
+      opencart:
+        condition: service_healthy
+    entrypoint: ["sh", "-c", "while ! nc -z opencart 8080; do sleep 1; done; exec $$@", "--"]
+    command: ["pytest", "-v", "--host=mariadb", "--url=http://opencart:8080", "--alluredir=allure-results", "--headless", "--browser=br", "--container"]
     networks:
-      - default
+      - selenoid
+
+volumes:
+  mariadb_data:
+    driver: local
 
 networks:
-  default:
-    name: selenoid
+  selenoid:
     external: true
+    name: selenoid
