--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Faker==35.2.0
 selenium==4.28.1
 allure-pytest==2.13.5
 pytest-xdist==3.6.1
+pytest-dependency==0.6.0
 webdriver-manager==4.0.2
 PyMySQL==1.1.1
 pytest-order==1.3.0
