--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     image: aerokube/selenoid:latest-release
     command: ["-limit", "10", "-container-network", "selenoid"]
     volumes:
-      - ./configs:/etc/selenoid
+      - ./configs/browsers.json:/etc/selenoid/browsers.json
       - /var/run/docker.sock:/var/run/docker.sock
     expose:
       - "4444"
