--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,9 +47,17 @@ services:
 
   selenoid1:
     image: aerokube/selenoid:latest-release
-    command: ["-limit", "10", "-container-network", "selenoid"]
+    command: 
+      - "-limit"
+      - "10" 
+      - "-container-network"
+      - "selenoid"
+      - "-timeout"
+      - "2m"
+      - "-service-startup-timeout"
+      - "2m"
     volumes:
-      - ${PWD}/configs/browsers.json/:/etc/selenoid/browsers.json
+      - ${PWD}/configs/browsers.json:/etc/selenoid/browsers.json:ro
       - /var/run/docker.sock:/var/run/docker.sock
     expose:
       - "4444"
