--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - selenoid
 
   selenoid1:
-    image: aerokube/selenoid:latest-release
+    image: aerokube/selenoid:1.8.2
     entrypoint: ["sh", "-c", "/usr/bin/selenoid $$@ && ls -la /etc/selenoid", "--"]
     command: ["-limit", "10", "-conf", "/etc/selenoid/browsers.json"]
     volumes:
